app/src/main/java/com/example/jokeapp/domain/Errors/ServiceUnavailable.kt
package com.example.jokeapp.domain.Errors

class ServiceUnavailable : BaseJokeFailure() {
    override fun getMessage(): String {
        TODO("Not yet implemented")
    }

}